--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-agrCongr=Congratulazioni! Inserimento {0} completato!
+agrCongr=Inserimento {0} completato! Per confermare cliccare su Salva.
 close=Chiudi
 available_actions=Azioni Disponibili
 logout=Logout
@@ -19,7 +19,7 @@ next=Avanti
 previous=Indietro
 reset=Reset
 select=Seleziona
-sure=Sei sicuro?
+sure=Vuoi veramente procedere?
 load=Carica
 choose=Scegli
 import=Importa
@@ -66,6 +66,7 @@ openClosed=Aperto/Chiuso
 
 fundTitle=Titolo
 
+shortTitle=Titolo riassuntivo
 agrTitle=Titolo
 contactPerson=Referente
 company=Ditta
