--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -193,3 +193,12 @@ userWiz_header=Creazione di un utente
 userProfile_header=Dati Personali
 changePassword_header=Cambia la tua password
 changePassword_button=Cambia password
+
+view_companyList=Visualizza elenco ditte
+businessName=Ragione sociale
+legalResidence=Sede legale
+socialNumber=Codice fiscale
+VatNumber=Partita IVA
+companyName=Denominazione
+
+err_duplicateSocialNumber= Codice fiscale già esistente
