--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -143,6 +143,10 @@ di questi framework e, infine, di altre librerie usate per particolari contesti.
 \section{Notifiche e-mail}
 \input{notifica_email}
 
+\begin{thebibliography}{Language Detection}
+\input{bibliography}
+\end{thebibliography}
+
 
 
 \end{document}       
