company table wip

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -129,6 +129,7 @@ noShareFound=Nessuna quota inserita
 noInstallmentFound=Nessuna rata inserita
 noAttachmentFound=Nessun allegato inserito
 noUserFound=Nessun utente trovato
+noCompanyFound=Nessuna ditta trovata
 
 err_duplicateSerial=Matricola già esistente
 
