--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -71,7 +71,7 @@ for administration of technology transfer activities
 \degreeyear{2012/2013}
 \date{}
 \chair{Prof. Enrico Vicario}
-\othermembers{Ing. Jocapo Torrini\\}
+\othermembers{Ing. Jacopo Torrini\\}
 \numberofmembers{4}
 
 
@@ -143,9 +143,10 @@ di questi framework e, infine, di altre librerie usate per particolari contesti.
 \section{Notifiche e-mail}
 \input{notifica_email}
 
-\begin{thebibliography}{Language Detection}
-\input{bibliography}
-\end{thebibliography}
+%\nocite{*}
+%\bibliographystyle{IEEEbib}     % Inserimento della bibliografia
+%\bibliography{biblio}
+			% Mostra in bibliografia anche gli oggetti non citati 
 
 
 
