--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -143,11 +143,11 @@ di questi framework e, infine, di altre librerie usate per particolari contesti.
 \section{Notifiche e-mail}
 \input{notifica_email}
 
-%\nocite{*}
-%\bibliographystyle{IEEEbib}     % Inserimento della bibliografia
-%\bibliography{biblio}
-			% Mostra in bibliografia anche gli oggetti non citati 
+			
 
+\nocite{*}		 % Mostra in bibliografia anche gli oggetti non citati 
+\bibliography{biblio}{}
+\bibliographystyle{plain}
 
 
 \end{document}       
