--- a/Docs/Tesi/biblio.bib
+++ b/Docs/Tesi/biblio.bib
@@ -1,23 +1,42 @@
- 
-%  a sample bibliography file
-%  
-
-@article{small,
-author = {Freely, I.P.},
-title = {A small paper},
-journal = {The journal of small papers},
-year = 1997,
-volume = {-1},
-note = {to appear},
+@book{jpa,
+    author    = "Mike Keith and Merrick Schincariol",
+    title     = "Pro JPA 2",
+    publisher = "Apress",
 }
-
-@article{big,
-author = {Jass, Hugh},
-title = {A big paper},
-journal = {The journal of big papers},
-year = 7991,
-volume = {MCMXCVII},
+@book{jsf,
+    author    = "David Geary and Cay HorstMann",
+    title     = "Core JavaServer Faces",
+    publisher = "Prentice Hall",
 }
-
-%  The authors mentioned here are almost, but not quite,
-%  entirely unrelated to Matt Groening.
+@book{effective,
+    author    = "Joshua Bloch",
+    title     = "Effective Java",
+    publisher = "Addison-Wesley",
+}
+@book{gof,
+    author    = "Gamma and Helm and Johnson and Vlissides",
+    title     = "Design Patterns",
+    publisher = "Addison-Wesley",
+}
+@book{pa,
+    author    = "Martin Fowler",
+    title     = "Patterns of Enterprise Application Architecture",
+    publisher = "Addison-Wesley",
+}
+@manual{weld,
+author	="Gaving King and Peter Muir and Jozef Hartinger and Dan Allen and David Allen",
+title	="CDI: Contexts and Dependency Injection for the Java EE platform"
+}
+@misc{inversion,
+      author = "Martin Fowler",
+      title = "Inversion of Control Containers and the Dependency Injection pattern",
+      url = "http://martinfowler.com/articles/injection.html"
+}
+@misc{freemarker,
+      title = "FreeMarker",
+      url = "http://freemarker.org/"
+}
+@misc{jldap,
+      title = "JLDAP",
+      url = "http://www.openldap.org/jldap/"
+}
