--- a/Docs/Tesi/biblio.bib
+++ b/Docs/Tesi/biblio.bib
@@ -23,20 +23,26 @@
     title     = "Patterns of Enterprise Application Architecture",
     publisher = "Addison-Wesley",
 }
-@manual{weld,
+@book{weld,
+author	="Doug Rosenberg and Matt Stephens",
+title	="Use Case Driven Object Modeling with UML",
+publisher = "Apress",
+}
+@misc{useDriven,
 author	="Gaving King and Peter Muir and Jozef Hartinger and Dan Allen and David Allen",
-title	="CDI: Contexts and Dependency Injection for the Java EE platform"
+title	="CDI: Contexts and Dependency Injection for the Java EE platform",
+howpublished = {\url{http://docs.jboss.org/weld/reference/1.0.0/en-US/html/}},
 }
 @misc{inversion,
       author = "Martin Fowler",
       title = "Inversion of Control Containers and the Dependency Injection pattern",
-      url = "http://martinfowler.com/articles/injection.html"
+      howpublished = {\url{http://martinfowler.com/articles/injection.html}},
 }
 @misc{freemarker,
       title = "FreeMarker",
-      url = "http://freemarker.org/"
+      howpublished = {\url{http://freemarker.org/}},
 }
 @misc{jldap,
       title = "JLDAP",
-      url = "http://www.openldap.org/jldap/"
+      howpublished = {\url{http://www.openldap.org/jldap/}},
 }
