--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -120,7 +120,7 @@ di questi framework e, infine, di altre librerie usate per particolari contesti.
 \subsection{FreeMarker}
 \label{freemarker}
 \input{freemarker}
-\chapter{Utilizzo}
+\chapter{Test funzionale e collaudo}
 \input{utilizzo}
 \label{howto}
 \chapter{Dietro le quinte}
@@ -142,6 +142,8 @@ di questi framework e, infine, di altre librerie usate per particolari contesti.
 \input{scheduler}
 \section{Notifiche e-mail}
 \input{notifica_email}
+\section{Valuta}
+\input{money}
 
 			
 
