--- a/Docs/Tesi/Introduzione.tex
+++ b/Docs/Tesi/Introduzione.tex
@@ -55,7 +55,7 @@ Il diagramma dei Casi d'Uso è una specifica di alto livello di ciò che l'appli
 
 \section{Tecnologie}
 L'applicazione è stata sviluppata in \textsl{Java}, con l'aiuto di alcuni \textit{framework} che gestiscono vari aspetti dell'architettura. In particolare, \textsl{JPA} - acronimo per \textsl{Java Persistence API} - si occupa, insieme ad \textsl{Hibernate}, della persistenza\footnote{Si rimanda alla Sezione \ref{jpa} per ulteriori dettagli sul problema della persistenza}; \textsl{Java Server Faces}, o \textsl{JSF}, si occupa del cosiddetto \textsl{Presentation Layer} dell'applicazione, ovvero dell'interfaccia utente; \textsl{CDI}, ovvero \textsl{Context and Dependency Injection}, è un grande aiuto nello sviluppo generale dell'applicazione, permettendo di gestire in maniera semplice ed efficace le relazioni tra i vari componenti dell'applicazione; infine \textsl{Deltaspike} si occupa della gestione dei ruoli e dei permessi degli utenti dell'applicazione.\newline
-Ognuno dei \textit{framework} sopra menzionati verrà discusso in dettaglio  nel Capitolo ~\ref{tecnologie}, che descriverà meglio il loro ruolo, i vantaggi ottenuti dal loro uso e il modo con cui usarli.
+Ognuno dei \textit{framework} sopra menzionati viene discusso in dettaglio  nel Capitolo ~\ref{tecnologie}.
 
 \begin{comment}
 \section{Utilizzo}
