tabelle ripartizione personale: quote modificabili

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -163,6 +163,9 @@ err_invalidEmail=Indirizzo email non valido
 err_generic=E' avvenuto un errore
 err_sendingMail=E' avvenuto un errore durante l'invio dell' email di notifica
 
+err_duplicateSocialNumber= Codice fiscale già esistente
+
+
 info_badLogin=Matricola o password errati
 info_badLogin_detail=Matricola o password errati: inserire i valori corretti
 
@@ -202,4 +205,5 @@ socialNumber=Codice fiscale
 VatNumber=Partita IVA
 companyName=Denominazione
 
-err_duplicateSocialNumber= Codice fiscale già esistente
+table_share=Quota(tabella)
+
